--- a/index.html
+++ b/index.html
@@ -77,19 +77,17 @@
       <div class="container">
         <div class="row justify-content-between">
           <div class="col-lg-5 hero-text">
-            <div class="intro-excerpt">
-              <h1>
-                BEKERJA DENGAN KAMI!
-                <span class="d-block lead">With Mariee - Fashion Studio</span>
-              </h1>
-              <p class="mb-4 text-hero">
-                Kami ingin mempelajari lebih lanjut tentang perjalanan dan tujuan Anda untuk membantu Anda dengan lebih baik. Jangan ragu untuk membagikan beberapa detailnya! Jangan lupa untuk mengirimkan email Anda di bawah. Setelah Anda melengkapi formulir, kami akan mengirimkan paket selamat datang kepada Anda. Kami sangat senang menjadi bagian dari perjalanan Anda!
-              </p>
-              <p>
-                <a href="" class="btn btn-secondary me-2 mb-3">Work with Us!</a
-                ><a href="https://wa.me/6282138555403" class="btn btn-white-outline mb-3">Contact Us</a>
-              </p>
-            </div>
+            <h1>
+              BEKERJA DENGAN KAMI!
+              <span class="d-block lead">With Mariee - Fashion Studio</span>
+            </h1>
+            <p style="font-size: 18px;" class="mb-4 text-hero">
+              Kami ingin mempelajari lebih lanjut tentang perjalanan dan tujuan Anda untuk membantu Anda dengan lebih baik. Jangan ragu untuk membagikan beberapa detailnya! Jangan lupa untuk mengirimkan email Anda di bawah. Setelah Anda melengkapi formulir, kami akan mengirimkan paket selamat datang kepada Anda. Kami sangat senang menjadi bagian dari perjalanan Anda!
+            </p>
+            <p>
+              <a href="" class="btn btn-secondary me-2 mb-3">Work with Us!</a
+              ><a href="https://wa.me/6282138555403" class="btn btn-white-outline mb-3">Contact Us</a>
+            </p>
           </div>
           <div class="col-lg-7">
             <div class="hero-img-wrap">
@@ -109,11 +107,11 @@
             <h1 style="color: black">Tentang Kami</h1>
           </div>
           <div class="col-12 col-lg-8 about-col" style="display: table-cell">
-            <p>
+            <p  style="font-size: 18px;">
               Memperkenalkan Mariee, tempat desain feshion dan pemasaran bersatu! Bayangkan kami sebagai tim impian Anda – desainer, pembuat pola, penjahit, pemotong, dan konsultan – masing-masing dengan keahlian puluhan tahun. Pusat kreatif kami berlokasi di Solo, Indonesia.
             </p>
               Baik Anda seorang pemula atau merek mapan, Mariee adalah mitra setia Anda.
-            <p>
+            <p style="font-size: 18px;">
               Kami menawarkan paket komprehensif, memandu Anda mulai dari branding dan konsultasi hingga desain, pengambilan sampel, produksi, kontrol kualitas hingga pengiriman. Perjalanan fesyen Anda akan menjadi lebih seru!
             </p>
           </div>
@@ -131,7 +129,7 @@
         <div class="row justify-content-between">
           <div class="col-lg-12 text-center">
             <h1 class="section-title">Mengapa Memilih Kami?</h2>
-            <p>
+            <p  style="font-size: 18px;">
               Pilih kami untuk kemitraan yang mengutamakan visi, anggaran, dan waktu Anda. Kesuksesan Anda di dunia fashion dimulai dari sini!
             </p>
             <div class="row my-5 text-center">
@@ -146,7 +144,7 @@
                       class="img-fluid"
                     />
                   </div>
-                  <p class="text-start ">
+                  <p style="font-size: 18px;" class="text-start ">
                     Mulailah perjalanan feshion Anda tanpa kendala! Kuantitas Pesanan Minimum kami yang rendah membuka pintu bagi para startup untuk mewujudkan desain unik mereka, mewujudkan setiap pakaian impian menjadi kenyataan.
                   </p>
                 </div>
@@ -162,7 +160,7 @@
                       class="img-fluid"
                     />
                   </div>
-                  <p class="text-start ">
+                  <p style="font-size: 18px;" class="text-start ">
                     Dapatkan keterjangkauan tanpa mengorbankan kualitas. Kami menawarkan harga terbaik untuk kebutuhan fesyen terbaik, memastikan Anda mendapatkan semua yang Anda butuhkan, semuanya di satu tempat. Tingkatkan gaya Anda tanpa menghabiskan banyak uang!
                   </p>
                 </div>
@@ -178,7 +176,7 @@
                       class="img-fluid"
                     />
                   </div>
-                  <p class="text-start ">
+                  <p style="font-size: 18px;" class="text-start ">
                     Waktu sangatlah penting, dan kami memahami hal itu. Dari konfirmasi PO hingga ke depan pintu Anda, rasakan proses yang lancar dengan waktu pengiriman berkisar antara 5 dan 25 hari. Kami menghargai waktu Anda dan berupaya mewujudkan kreasi Anda dengan kecepatan mode.
                   </p>
                 </div>
@@ -194,7 +192,7 @@
                       class="img-fluid"
                     />
                   </div>
-                  <p class="text-start ">
+                  <p style="font-size: 18px;" class="text-start ">
                     Kepuasan Anda adalah prioritas kami. Dengan proses Kontrol Kualitas yang ketat berdasarkan Prosedur Operasi Standar (SOP), setiap bagian diperiksa dengan cermat untuk memastikan memenuhi standar tertinggi. Percayakan pada kami untuk memberikan tidak hanya fashion, tapi juga keunggulan.
                   </p>
                 </div>
@@ -254,12 +252,9 @@
                 <div class="middle_card">
                   <div class="text_card">
                     <h3>Memulai Pengalaman</h3>
-                    <!-- <p>
+                    <p>
                       We are looking forward to potentially working with you!
-                    </p> -->
-                    <a href="#" class="btn btn-dark-outline"
-                      >Ayo Mulai!</a
-                    >
+                    </p>
                   </div>
                 </div>
               </div>
@@ -279,10 +274,7 @@
                 <div class="middle_card">
                   <div class="text_card">
                     <h3>Pengalaman Desain</h3>
-                    <!-- <p>Let us introduce ourselves!</p> -->
-                    <a href="#" class="btn btn-secondary-outline"
-                      >Pelajari</a
-                    >
+                    <p>Let us introduce ourselves!</p>
                   </div>
                 </div>
               </div>
@@ -301,10 +293,7 @@
                 <div class="middle_card">
                   <div class="text_card">
                     <h3>Paket Premium</h3>
-                    <!-- <p>Let your design be known!</p> -->
-                    <a href="#" class="btn btn-secondary-outline"
-                      >Temukan</a
-                    >
+                    <p>Let your design be known!</p>
                   </div>
                 </div>
               </div>
@@ -386,7 +375,7 @@
           <h1 style="color: black">
             Dimana Desain Fashion Bertemu Keajaiban Pemasaran!
           </h1>
-          <p>
+          <p style="font-size: 18px;">
             Masuki dunia di mana kreativitas bertabrakan dengan strategi, di mana
             benang desain terjalin mulus dengan kain pemasaran
             kecemerlangan. Di persimpangan Desain Fashion dan Pemasaran, a
@@ -394,7 +383,7 @@
           </p>
         </div>
         <div class="col-12 mb-5 px-5 px-xl-0 px-lg-0 px-md-0">
-          <h2 style="color: black">Pilih Paket Anda</h2>
+          <h2 style="color: black">Pilih Model Design Anda</h2>
           <div class="row card-container">
             <!-- ITEM 1 -->
             <div class="col-12 mb-3 col-md-6 col-lg-3">
@@ -411,7 +400,7 @@
                   <div style="font-size: 1rem">
                     <b>Mulai dari :</b>
                     <br />
-                    <span>IDR 14,000 - IDR 19,000</span>              
+                    <span style="font-size: 18px;">Rp 14,000 - Rp 19,000</span>              
                   </div>
                 </div>
               </div>
@@ -432,7 +421,7 @@
                   <div style="font-size: 1rem">
                     <b>Mulai dari :</b>
                     <br />
-                    <span>IDR 9,000 - IDR 13,000</span>              
+                    <span style="font-size: 18px;">Rp 9,000 - Rp 13,000</span>              
                   </div>
                 </div>
               </div>
@@ -454,7 +443,7 @@
                   <div style="font-size: 1rem">
                     <b>Mulai dari :</b>
                     <br />
-                    <span>IDR 10,000 - IDR 15,000</span>              
+                    <span style="font-size: 18px;">Rp 10,000 - Rp 15,000</span>              
                   </div>
                 </div>
               </div>
@@ -476,7 +465,7 @@
                   <div style="font-size: 1rem">
                     <b>Mulai dari :</b>
                     <br />
-                    <span>IDR 10,000 - IDR 15,000</span>              
+                    <span>Rp 10,000 - Rp 15,000</span>              
                   </div>
                 </div>
               </div>
@@ -500,7 +489,7 @@
                   <div style="font-size: 1rem">
                     <b>Mulai dari :</b>
                     <br />
-                    <span>IDR 14,000 - IDR 19,000</span>              
+                    <span style="font-size: 18px;">Rp 14,000 - Rp 19,000</span>              
                   </div>
                 </div>
               </div>
@@ -521,7 +510,7 @@
                   <div style="font-size: 1rem">
                     <b>Mulai dari :</b>
                     <br />
-                    <span>IDR 12,000 - IDR 16,000</span>              
+                    <span style="font-size: 18px;">Rp 12,000 - Rp 16,000</span>              
                   </div>
                 </div>
               </div>
@@ -542,33 +531,12 @@
                   <div style="font-size: 1rem">
                     <b>Mulai dari :</b>
                     <br />
-                    <span>IDR 18,000 - IDR 22,000</span>              
+                    <span style="font-size: 18px;">Rp 18,000 - Rp 22,000</span>              
                   </div>
                 </div>
               </div>
             </div>
             <!-- END ITEM 7 -->
-            <!-- ITEM 8 -->
-            <div class="col-12 mb-3 col-md-6 col-lg-3">
-              <div class="card mt-3">
-                <img
-                  class="card-img-top"
-                  src="assets/images/design/fd8.jpeg"
-                  alt="Card image cap"
-                />
-                <div class="card-body">
-                  <h5 class="card-title mb-3">Jaket Hoodie</h5>
-                </div>
-                <div class="card-footer">
-                  <div style="font-size: 1rem">
-                    <b>Mulai dari :</b>
-                    <br />
-                    <span>IDR 20,000 - IDR 30,000</span>              
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- END ITEM 4 -->
           </div>
         </div>
         <hr />
@@ -661,43 +629,10 @@
                 >Mariee<span class="text-danger">.</span></a
               >
             </div>
-            <p class="mb-4">
+            <p style="font-size: 18px;" class="mb-4">
               Memperkenalkan Mariee, tempat desain fesyen dan pemasaran bersatu! Bayangkan kami sebagai tim impian Anda – desainer, pembuat pola, penjahit, pemotong, dan konsultan – masing-masing dengan keahlian puluhan tahun. Pusat kreatif kami berlokasi di Solo, Indonesia.
             </p>
-
-            <!-- {{--
-            <ul class="list-unstyled custom-social">
-              <li>
-                <a href="#"><span class="fa fa-brands fa-facebook-f"></span></a>
-              </li>
-              <li>
-                <a href="#"><span class="fa fa-brands fa-twitter"></span></a>
-              </li>
-              <li>
-                <a href="#"><span class="fa fa-brands fa-instagram"></span></a>
-              </li>
-              <li>
-                <a href="#"><span class="fa fa-brands fa-linkedin"></span></a>
-              </li>
-            </ul>
-            --}} -->
-          </div>
-
-          <div class="col-lg-8">
-            <div class="row links-wrap">
-              <div class="col-6 col-sm-6 col-md-3">
-              </div>
-
-              <!-- {{--
-              <div class="col-6 sofa-img">
-                <img
-                  src="assets/images/footer1.jpeg"
-                  alt="Image"
-                  class="img-fluid img-footer"
-                />
-              </div>
-              --}} -->
-              <div
+            <div
                 class="col-12 col-sm-12 mt-lg-0 mt-md-0 mt-sm-5 col-md-6 col-xl-6"
               >
                 <ul class="list-unstyled custom-social">
@@ -724,6 +659,36 @@
                 </ul>
               </div>
 
+            <!-- {{--
+            <ul class="list-unstyled custom-social">
+              <li>
+                <a href="#"><span class="fa fa-brands fa-facebook-f"></span></a>
+              </li>
+              <li>
+                <a href="#"><span class="fa fa-brands fa-twitter"></span></a>
+              </li>
+              <li>
+                <a href="#"><span class="fa fa-brands fa-instagram"></span></a>
+              </li>
+              <li>
+                <a href="#"><span class="fa fa-brands fa-linkedin"></span></a>
+              </li>
+            </ul>
+            --}} -->
+          </div>
+
+          <div class="col-lg-8">
+            <div class="row links-wrap">
+              <!-- {{--
+              <div class="col-6 sofa-img">
+                <img
+                  src="assets/images/footer1.jpeg"
+                  alt="Image"
+                  class="img-fluid img-footer"
+                />
+              </div>
+              --}} -->
+              
               <!-- {{--
               <div class="col-6 col-sm-6 col-md-3">
                 <ul class="list-unstyled">
